# garden_cli

./: Cargo.toml  README.md  flow.md  reference.rs
data/: dummy_orders.json  order_ids.json  order_secrets.json
logs/: garden_cli_2025-04-29_16-50-59.json  garden_cli_2025-04-29_16-57-46.json  garden_cli_2025-04-29_17-01-42.json  garden_cli_2025-04-29_17-06-13.json  garden_cli_2025-04-29_17-08-30.json  garden_cli_2025-04-29_17-18-06.json  garden_cli_2025-04-29_17-19-40.json  garden_cli_2025-04-29_18-04-17.json  garden_cli_2025-04-29_18-09-33.json  garden_cli_2025-04-29_18-10-10.json  garden_cli_2025-04-29_18-16-31.json  garden_cli_2025-04-29_18-16-46.json  garden_cli_2025-04-29_18-19-25.json  garden_cli_2025-05-02_11-03-59.json  garden_cli_2025-05-02_11-04-03.json  garden_cli_2025-05-02_11-05-14.json  garden_cli_2025-05-02_11-05-27.json  garden_cli_2025-05-02_11-06-11.json  garden_cli_2025-05-02_11-09-21.json  garden_cli_2025-05-02_11-09-44.json  garden_cli_2025-05-02_11-13-20.json
src/: main.rs
src/cli/: args.rs  continuous_orders.rs  mod.rs
src/models/: additional_data.rs  mod.rs  order.rs  quote.rs
src/services/: mod.rs  order_service.rs  quote_service.rs  starknet_services.rs
src/utils/: dummy_orders.rs  file_utils.rs  logging.rs  mod.rs
